--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,8 @@
   background-color: #21d4fd;
   background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
 }
+
+.antd-button-fix {
+  display: inline-flex;
+  align-items: center;
+}
